compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__echo__echo_in_a_pipeline.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/echo.rs
assertion_line: 120
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> echo\n  |> wibble\n}\n\npub fn wibble(n) { n }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  [1, 2, 3]
  |> echo
  |> wibble
}

pub fn wibble(n) { n }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([wibble/1, main/0]).

-file("project/test/my/mod.gleam", 8).
-spec wibble(J) -> J.
wibble(N) ->
    N.

-file("project/test/my/mod.gleam", 2).
-spec main() -> list(integer()).
main() ->
    _pipe = [1, 2, 3],
    echo(_pipe, nil, 4),
    wibble(_pipe).

% ...omitted code from `templates/echo.erl`...
