compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__echo__echo_with_a_block.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/echo.rs
assertion_line: 106
expression: "\npub fn main() {\n  echo {\n    Nil\n    1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo {
    Nil
    1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(
        begin
            nil,
            1
        end,
        nil,
        3
    ).

% ...omitted code from `templates/echo.erl`...
