compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__echo__echo_with_a_simple_expression_and_a_message.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/echo.rs
assertion_line: 16
expression: "\npub fn main() {\n  echo 1 as \"hello!\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo 1 as "hello!"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(1, <<"hello!"/utf8>>, 3).

% ...omitted code from `templates/echo.erl`...
