compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__echo__multiple_echos_inside_expression.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/echo.rs
assertion_line: 43
expression: "\npub fn main() {\n  echo 1\n  echo 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo 1
  echo 2
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(1, nil, 3),
    echo(2, nil, 4).

% ...omitted code from `templates/echo.erl`...
